# clang2cabs

./: Makefile  README.md  clang2cabs.opam  index.html
.github/workflows/: gh-pages.yml  main.yml
clang2cabs/: index.html
clang2cabs/Clang2cabs_lib/: index.html
clang2cabs/Clang2cabs_lib/A/: index.html
sample/: arr.c  arr.c.yojson  bug1.c.yojson  comments.c.yojson  hoge.c.yojson  import1.h  import2.c.yojson  min.c.yojson  sarray.c  sarray.c.yojson  test.c  test.c.yojson
sample/gzip-1.10-clang-yojson/: Makefile  aclocal.m4  bits.c.yojson  config.status  configure  configure.lineno  lzw.c.yojson  make.orig1.sh  make.orig2.sh  make1.sh  make2.sh  unpack.c.yojson  version.c.yojson
sample/metadata/: is_global.c  is_global.c.yojson
sample/misc/: conditional.c  conditional.c.yojson  deref.c  deref.c.yojson
sample/primitives/: string.c  string.c.yojson
sample/small_c/: arr.c.yojson  bug1.c  bug1.c.yojson  comments.c  comments.c.yojson  hoge.c  hoge.c.yojson  import1.c  import1.c.yojson  import2.c  import2.c.yojson  min.c.yojson  sarray.c.yojson  test.c.yojson
sample/types/: discriminated_union.c  discriminated_union.c.yojson  discriminated_union2.c  discriminated_union2.c.yojson  enum.c  enum.c.yojson  linked_list.c  linked_list.c.yojson  record.c  record.c.yojson  types.c  types.c.yojson  union.c  union.c.yojson
scripts/: clang2json.sh
src/lib/: a.ml  ast.ml  ast.mli  ast2cabs.ml  ast2cabs.mli  cabs.ml  dune  util.ml  util.mli  yojson2ast.ml  yojson2ast.mli  yojson2cabs.ml  yojson2cabs.mli
src/test/: dune
test/: dune  run_tests.ml
(+142 files in other folders)
