opam-version: "2.0"
maintainer: "y.imai@proof-ninja.co.jp"
authors: ["Yoshihiro Imai"]

homepage: "https://github.com/proof-ninja.co.jp/clang2cabs"
bug-reports: "https://github.com/proof-ninja.co.jp/clang2cabs/issues"
dev-repo: "git+https://github.com/proof-ninja.co.jp/clang2cabs.git"
version: "dev"

# TODO Pick the relevant SPDX identifier <https://spdx.org/licenses/>
license: "Unlicense"

synopsis: "Translate from C to cabs"

description: """
_Project description_
"""

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

run-test: ["dune" "runtest" "-p" name]

depends: [
  "dune"
  "yojson"
  "ocamlformat" { >= "0.17.0" }
  "alcotest" {with-test}
]
